# evm-report

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MODELES_EXCEL.md  README.md  TESTS_SUMMARY.md  analyse.py  pv_model.xlsx  pyproject.toml  requirements.txt  va_model.xlsx
.github/workflows/: ci.yml
docs/: TESTS_SUMMARY.md
evm_report.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
models/: EXPORT_model.xlsx  forecast_model.xlsx
src/: __init__.py  cli.py
src/calculs/: __init__.py  depenses.py  earned_value.py  planned_value.py  projections.py
src/evm_io/: __init__.py  readers.py
src/io/: writers.py
src/visualisation/: __init__.py  graphiques.py  rapport_word.py
tests/: README.md  __init__.py  conftest.py  test_calculs_evm.py  test_gestion_erreurs.py  test_graphiques.py  test_integration.py  test_lecture_fichiers.py  test_main.py  test_projections.py  test_rapport_word.py  test_validation_fichiers.py
